fixed the overlapping navigation bar

--- a/src/main/webapp/css/peralyzer.css
+++ b/src/main/webapp/css/peralyzer.css
@@ -20,9 +20,14 @@
 	padding-left: 15px;
 }
 
-.home-page-div {
+.home-pane {
 	text-align: justify;
 }
+
+.default-pane {
+	padding-left: 20px;
+}
+
 .tooltip-superscript {
 	position: relative;
 	left: -.4em;
@@ -89,8 +94,6 @@
 
 body {
 	min-height: 1080px;
-	padding-top: 70px;
-	padding-left: 20px;
 }
 
 /* LEGEND style */
